1. Collection API Улучшения[#113221]